--- a/whisker.tex
+++ b/whisker.tex
@@ -11,7 +11,7 @@
 
 \begin{frontmatter}
 
-\title{Novel whisker electrode for \emph{in-situ} corrosion product monitoring}
+\title{Novel cat's--whisker electrode for \emph{in-situ} corrosion product monitoring}
 \cortext[cor]{Corresponding author}
 \author[akiss]{Andr\'{a}s Kiss\corref{cor}}
 \address[akiss, gnagy]{Department of General and Physical Chemistry, Faculty of Sciences, University of P\'{e}cs, 7624 P\'{e}cs, Ifj\'{u}s\'{a}g \'{u}tja 6, Hungary}
@@ -38,6 +38,7 @@
 % trim = left bottom right top
 %\includegraphics[trim = 350mm 300mm 460mm 250mm, clip, width=0.25\textwidth]{IMG.jpg}
 \includegraphics[width=0.25\textwidth]{img1.png}
+\hspace{2cm}
 \includegraphics[width=0.25\textwidth]{img2.png}
 
 \caption{Figure caption.}
