--- a/whisker.tex
+++ b/whisker.tex
@@ -11,7 +11,7 @@
 
 \begin{frontmatter}
 
-\title{Novel cat's--whisker electrode for \emph{in-situ} corrosion product monitoring}
+\title{Novel cat's--whisker electrode for \emph{in-situ} surface conductivity monitoring}
 \cortext[cor]{Corresponding author}
 \author[akiss]{Andr\'{a}s Kiss\corref{cor}}
 \address[akiss, gnagy]{Department of General and Physical Chemistry, Faculty of Sciences, University of P\'{e}cs, 7624 P\'{e}cs, Ifj\'{u}s\'{a}g \'{u}tja 6, Hungary}
@@ -19,6 +19,7 @@
 \ead{akiss@gamma.ttk.pte.hu}
 \author[gnagy]{G\'{e}za Nagy}
 \ead{g-nagy@gamma.ttk.pte.hu}
+\author[lkiss]{L\'{a}szl\'{o} Kiss}
 
 \begin{abstract}
 \end{abstract}
@@ -31,11 +32,11 @@
 \begin{figure}[H]
 \centering
 % trim = top left bottom right
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{17052401.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{17052402.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{17052403.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{17052405.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011710.eps} 
+\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{17052401.eps} 
+\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{17052402.eps}
+\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{17052403.eps} 
+\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{17052405.eps}
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011710.eps} 
 
 % trim = left bottom right top
 %\includegraphics[trim = 350mm 300mm 460mm 250mm, clip, width=0.25\textwidth]{IMG.jpg}
@@ -48,42 +49,44 @@
 \end{figure}
 
 
-\begin{figure}[H]
-\centering
-% trim = top left bottom right
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011710.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011711.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011712.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011713.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011714.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011715.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011716.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011719.eps} 
-\caption{Half covered.}
-\label{fig:deconvolution}
-\end{figure}
+%\begin{figure}[H]
+%\centering
+%% trim = top left bottom right
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011710.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011711.eps}
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011712.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011713.eps}
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011714.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011715.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011716.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011719.eps} 
+%\caption{Half covered.}
+%\label{fig:deconvolution}
+%\end{figure}
 
-\begin{figure}[H]
-\centering
-% trim = top left bottom right
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011701.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011702.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011703.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011704.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011705.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011706.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011707.eps} 
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011708.eps}
-\caption{Fully covered.}
-\label{fig:deconvolution}
-\end{figure}
+%\begin{figure}[H]
+%\centering
+%% trim = top left bottom right
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011701.eps}
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011702.eps}
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011703.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011704.eps}
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011705.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011706.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011707.eps} 
+%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18011708.eps}
+%\caption{Fully covered.}
+%\label{fig:deconvolution}
+%\end{figure}
 
 \begin{figure}[H]
 \centering
 % trim = top left bottom right
 \includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18012406.eps}
 \includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18012406_deconvoluted.eps}
-\caption{Fully covered.}
+%\includegraphics[trim = 350mm 300mm 460mm 250mm, clip, width=0.5\textwidth]{img.jpg}
+\includegraphics[width=0.5\textwidth]{img.jpg}
+\caption{Polyph.}
 \label{fig:deconvolution}
 \end{figure}
 
