--- a/whisker.tex
+++ b/whisker.tex
@@ -82,15 +82,14 @@
 \begin{figure}[H]
 \centering
 % trim = top left bottom right
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18012406.eps}
-\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{18012406_deconvoluted.eps}
+\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{18012501.eps}\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{18012406.eps}
+\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{18012501_deconvoluted.eps}\includegraphics[trim = 15mm 30mm 0mm 15mm, clip, width=0.3\textwidth, angle=-90]{18012406_deconvoluted.eps}
 %\includegraphics[trim = 350mm 300mm 460mm 250mm, clip, width=0.5\textwidth]{img.jpg}
-\includegraphics[width=0.5\textwidth]{img.jpg}
-\caption{Polyph.}
+% trim = left bottom right top
+\includegraphics[width=0.25\textwidth]{ppyrrole_cut.jpg}\hspace{2cm}\includegraphics[width=0.25\textwidth]{pphenol_cut.jpg}
+\caption{Polypyrrole.}
 \label{fig:deconvolution}
 \end{figure}
-
-
 
 \begin{figure}[H]
 \centering
@@ -101,6 +100,5 @@
 \caption{Figure caption.}
 \label{fig:deconvolution}
 \end{figure}
-
 
 \end{document}
